--- a/ext/client.css
+++ b/ext/client.css
@@ -20,12 +20,14 @@
     background-color: #fff;
     border:           1px solid #999;
     box-shadow:       0 0 10px rgba(0, 0, 0, .5);
-    max-width:        50em;
+    color:            #000;
+    max-height:       25em;
+    max-width:        30em;
+    overflow-y:       scroll;
     padding:          10px;
-    pointer-events:   none;
     position:         fixed;
-    width:            auto;
-    z-index:          64;
+    visibility:       hidden;
+    z-index:          256;
 }
 
 .yomichan-def-expression {
