--- a/ext/client.css
+++ b/ext/client.css
@@ -17,12 +17,15 @@
  */
 
 .yomichan-popup {
+    all:              initial;
     background-color: #fff;
     border:           1px solid #999;
     box-shadow:       0 0 10px rgba(0, 0, 0, .5);
     color:            #000;
+    font-family:      sans-serif;
+    font-size:        1em;
     max-height:       25em;
-    max-width:        30em;
+    max-width:        35em;
     overflow-y:       scroll;
     padding:          10px;
     position:         fixed;
@@ -32,12 +35,14 @@
 
 .yomichan-def-expression {
     float:       left;
-    font-weight: bold;
+    font-family: serif;
+    font-size:   1.25em;
 }
 
 .yomichan-def-reading {
     float:       right;
-    font-weight: bold;
+    font-family: serif;
+    font-size:   1.25em;
 }
 
 .yomichan-def-glossary {
