--- a/ext/client.css
+++ b/ext/client.css
@@ -23,11 +23,10 @@
     box-shadow:       0 0 10px rgba(0, 0, 0, .5);
     color:            #000;
     font-family:      sans-serif;
-    font-size:        1em;
-    max-height:       25em;
-    max-width:        35em;
-    min-height:       10em;
-    min-width:        15em;
+    font-size:        12pt;
+    max-height:       300px;
+    max-width:        500px;
+    min-width:        200px;
     overflow-y:       auto;
     padding:          10px;
     position:         fixed;
@@ -38,13 +37,13 @@
 .yomichan-def-expression {
     float:       left;
     font-family: serif;
-    font-size:   1.25em;
+    font-size:   16pt;
 }
 
 .yomichan-def-reading {
     float:       right;
     font-family: serif;
-    font-size:   1.25em;
+    font-size:   16pt;
 }
 
 .yomichan-def-glossary {
