--- a/ext/fg/css/client.css
+++ b/ext/fg/css/client.css
@@ -17,13 +17,14 @@
  */
 
 iframe#yomichan-popup {
-    all:        initial;
-    border:     1px solid #999;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    height:     250px;
-    position:   fixed;
-    resize:     both;
-    visibility: hidden;
-    width:      400px;
-    z-index:    2147483647;
+    all:              initial;
+    background-color: #fff;
+    border:           1px solid #999;
+    box-shadow:       0 0 10px rgba(0, 0, 0, .5);
+    height:           250px;
+    position:         fixed;
+    resize:           both;
+    visibility:       hidden;
+    width:            400px;
+    z-index:          2147483647;
 }
