--- a/ext/fg/css/popup.css
+++ b/ext/fg/css/popup.css
@@ -23,6 +23,7 @@ body {
     font-size:        14px;
     line-height:      1.42857143;
     overflow-y:       auto;
+    padding:          5px;
 }
 
 .term {
