--- a/ext/fg/css/frame.css
+++ b/ext/fg/css/frame.css
@@ -16,6 +16,8 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+/* common styles */
+
 body {
     background-color: #fff;
     color:            #333;
@@ -26,35 +28,18 @@ body {
     padding:          5px;
 }
 
-.term {
-    font-family: serif;
-    font-size:   24px;
-    display:     inline-block;
-}
-
-.term a {
-    border-bottom:   1px #777 dashed;
-    color:           #333;
-    text-decoration: none;
-}
-
-.rules {
-    color:   #777;
-    display: inline-block;
-}
-
 .tag {
-    border-radius:    0.25em;
-    color:            #fff;
-    cursor:           default;
-    display:          inline;
-    font-size:        75%;
-    font-weight:      700;
-    line-height:      1;
-    padding:          0.2em 0.6em 0.3em;
-    text-align:       center;
-    vertical-align:   baseline;
-    white-space:      nowrap;
+    border-radius:  0.25em;
+    color:          #fff;
+    cursor:         default;
+    display:        inline;
+    font-size:      75%;
+    font-weight:    700;
+    line-height:    1;
+    padding:        0.2em 0.6em 0.3em;
+    text-align:     center;
+    vertical-align: baseline;
+    white-space:    nowrap;
 }
 
 .tag-default {
@@ -73,17 +58,38 @@ body {
     background-color: #0275d8;
 }
 
-ol {
+/* term styles */
+
+.term-expression {
+    display:     inline-block;
+    font-family: serif;
+    font-size:   24px;
+}
+
+.term-expression a {
+    border-bottom:   1px #777 dashed;
+    color:           #333;
+    text-decoration: none;
+}
+
+.term-rules {
+    color:   #777;
+    display: inline-block;
+}
+
+.term-glossary ol {
     padding-left: 1.2em;
 }
 
-li {
+.term-glossary li {
     color: #777;
 }
 
-li span {
+.term-glossary li span {
     color: #000;
 }
+
+/* kanji styles */
 
 .kanji-glyph {
     float:          left;
