--- a/ext/fg/css/frame.css
+++ b/ext/fg/css/frame.css
@@ -117,6 +117,11 @@ body {
     color: #000;
 }
 
+.term-glossary p {
+    overflow-x:  auto;
+    white-space: pre;
+}
+
 /* kanji styles */
 
 .kanji-glyph {
@@ -152,4 +157,9 @@ body {
 
 .kanji-glossary li span {
     color: #000;
+}
+
+.kanji-glossary p {
+    overflow-x:  auto;
+    white-space: pre;
 }
