don't show add buttons till we know card state for #25

--- a/ext/fg/css/frame.css
+++ b/ext/fg/css/frame.css
@@ -86,6 +86,10 @@ body {
     opacity:        0.25;
 }
 
+.action-bar .pending {
+    visibility: hidden;
+}
+
 /* term styles */
 
 .term-expression {
