--- a/ext/fg/css/frame.css
+++ b/ext/fg/css/frame.css
@@ -138,8 +138,8 @@ body {
 }
 
 .term-glossary-group {
-    padding-bottom: 0.7em;
-    padding-top:    0.7em;
+    margin-top:    0.4em;
+    margin-bottom: 0.4em;
 }
 
 .term-glossary-item {
