--- a/ext/mixed/css/frame.css
+++ b/ext/mixed/css/frame.css
@@ -51,6 +51,11 @@ hr {
  * Entries
  */
 
+.entry {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .tag-default {
     background-color: #8a8a91;
 }
