--- a/ext/fg/css/client.css
+++ b/ext/fg/css/client.css
@@ -17,7 +17,7 @@
  */
 
 
-iframe#yomichan-popup {
+iframe#yomichan-float {
     all: initial;
     background-color: #fff;
     border: 1px solid #999;
