Improve popup position for vertical text

--- a/ext/fg/css/client.css
+++ b/ext/fg/css/client.css
@@ -26,6 +26,7 @@ iframe#yomichan-float {
     resize: both;
     visibility: hidden;
     z-index: 2147483647;
+    box-sizing: border-box;
 }
 
 iframe#yomichan-float.yomichan-float-full-width {
