Leave default stylesheet enabled by default

--- a/ext/mixed/css/display-default.css
+++ b/ext/mixed/css/display-default.css
@@ -17,8 +17,7 @@
  */
 
 
-body,
-html.yomichan-float body { background-color: #ffffff; color: #333333; }
+body { background-color: #ffffff; color: #333333; }
 
 hr { border-top-color: #eeeeee; }
 
