--- a/ext/mixed/css/display-dark.css
+++ b/ext/mixed/css/display-dark.css
@@ -17,8 +17,7 @@
  */
 
 
-body,
-html.yomichan-float body { background-color: #1e1e1e; color: #d4d4d4; }
+body { background-color: #1e1e1e; color: #d4d4d4; }
 
 hr { border-top-color: #2f2f2f; }
 
