--- a/ext/bg/css/settings.css
+++ b/ext/bg/css/settings.css
@@ -165,6 +165,24 @@ input[type=checkbox].storage-button-checkbox {
     height: 320px;
 }
 
+.dict-delete-table {
+    display: table;
+    width: 100%;
+}
+.dict-delete-table>*:first-child {
+    display: table-cell;
+    vertical-align: middle;
+    padding-right: 1em;
+}
+.dict-delete-table>*:nth-child(n+2) {
+    display: table-cell;
+    width: 100%;
+    vertical-align: middle;
+}
+.dict-delete-table .progress {
+    margin: 0;
+}
+
 [data-show-for-browser],
 [data-show-for-operating-system] {
     display: none;
