--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -98,7 +98,7 @@ ol, ul {
 }
 
 html:root[data-yomichan-page=search] body {
-    min-height: 101vh; /* always show scroll bar to avoid scanning problems */
+    overflow-y: scroll; /* always show scroll bar to avoid scanning problems */
 }
 
 
