Simplify how anki errors are shown

--- a/ext/bg/css/settings.css
+++ b/ext/bg/css/settings.css
@@ -17,7 +17,7 @@
  */
 
 
-#anki-spinner, #anki-error,
+#anki-spinner,
 #dict-spinner, #dict-import-progress,
 .storage-hidden, #storage-spinner {
     display: none;
