--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -233,7 +233,7 @@ button.action-button {
     border-top-style: solid;
 }
 
-.entry[data-type=term][data-multi-expression=true] .actions>.action-play-audio {
+.entry[data-type=term][data-expression-multi=true]:not([data-expression-count="1"]) .actions>.action-play-audio {
     display: none;
 }
 
@@ -280,11 +280,11 @@ button.action-button {
     content: "\3001";
 }
 
-.term-expression-list[data-multi=true] .term-expression-details {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression-details {
     visibility: hidden;
 }
 
-.term-expression-list[data-multi=true] .term-expression-details {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression-details {
     display: inline-block;
     position: relative;
     width: 0;
@@ -292,21 +292,21 @@ button.action-button {
     visibility: hidden;
 }
 
-.term-expression-list[data-multi=true] .term-expression:hover .term-expression-details {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression:hover .term-expression-details {
     visibility: visible;
 }
 
-.term-expression-list[data-multi=true] .term-expression-details>.action-play-audio {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression-details>.action-play-audio {
     position: absolute;
     left: 0;
     bottom: 0.5em;
 }
 
-.term-expression-list[data-multi=true] .term-expression-details>.action-play-audio {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression-details>.action-play-audio {
     display: block;
 }
 
-.term-expression-list[data-multi=true] .term-expression-details>.tags {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression-details>.tags {
     display: block;
     position: absolute;
     left: 0;
@@ -314,7 +314,7 @@ button.action-button {
     white-space: nowrap;
 }
 
-.term-expression-list[data-multi=true] .term-expression-details>.frequencies {
+.term-expression-list[data-multi=true]:not([data-count="1"]) .term-expression-details>.frequencies {
     display: block;
     position: absolute;
     left: 0;
