--- a/ext/mixed/css/display-default.css
+++ b/ext/mixed/css/display-default.css
@@ -59,12 +59,14 @@ h2 { border-bottom-color: #eeeeee; }
     color: #999999;
 }
 
-.term-definition-container,
-.kanji-glossary-container {
+.term-definition-list,
+.term-pitch-accent-group-list,
+.kanji-glossary-list {
     color: #777777;
 }
 
 .term-glossary,
+.term-pitch-accent,
 .kanji-glossary {
     color: #000000;
 }
@@ -74,3 +76,5 @@ h2 { border-bottom-color: #eeeeee; }
     background-color: #333333;
     color: #ffffff;
 }
+
+.term-pitch-accent-character:before { border-color: #000000; }
